@@ -223,31 +223,33 @@ class ShapeElFigure : public WdgShape
         QVector<int> copy_index, index_array_copy, index_array_copy_flag_A;
 
 	int count_Shapes, count_moveItemTo, index, fill_index, index_temp, index_del, rect_num;
-        short	status_hold	:1;
-	short	flag_cursor	:1;
-	short	flag_key	:1;
-	short	flag_up		:1;
-	short	flag_down	:1;
-	short	flag_left	:1;
-	short	flag_right	:1;
-	short	flag_ctrl	:1;
-	short	flag_ctrl_move	:1;
-	short	flag_m		:1;
-	short	flag_hold_arc	:1;
-	short	flag_A		:1;
-	short	flag_copy	:1;
-	short	flag_check_pnt_inund	:1;
-	short	flag_rect	:1;
-	short	flag_arc_rect_3_4	:1;
-	short	flag_first_move	:1;
-	short	flag_move	:1;
-	short	flag_release	:1;
-        short	flag_hold_move	:1;
-        short	flag_inund_break	:1;
-        short	flag_scale	:1;
-        short	flag_rotate	:1;
-        short	flag_angle_temp	:1;
-        short	flag_geom	:1;
+
+        unsigned status_hold	:1;
+	unsigned flag_cursor	:1;
+	unsigned flag_key	:1;
+	unsigned flag_up	:1;
+	unsigned flag_down	:1;
+	unsigned flag_left	:1;
+	unsigned flag_right	:1;
+	unsigned flag_ctrl	:1;
+	unsigned flag_ctrl_move	:1;
+	unsigned flag_m		:1;
+	unsigned flag_hold_arc	:1;
+	unsigned flag_A		:1;
+	unsigned flag_copy	:1;
+	unsigned flag_check_pnt_inund	:1;
+	unsigned flag_rect	:1;
+	unsigned flag_arc_rect_3_4	:1;
+	unsigned flag_first_move	:1;
+	unsigned flag_move	:1;
+	unsigned flag_release	:1;
+        unsigned flag_hold_move	:1;
+        unsigned flag_inund_break	:1;
+        unsigned flag_scale	:1;
+        unsigned flag_rotate	:1;
+        unsigned flag_angle_temp	:1;
+        unsigned flag_geom	:1;
+
         int count_rects, rect_num_arc, arc_rect;
         double t_start, t_end;
 	QPointF Mouse_pos, offset, pop_pos;
