@@ -619,18 +619,20 @@ void TValFunc::setB( unsigned id, char val )
 
 void TValFunc::setO( unsigned id, TVarObj *val )
 {
-    if( id >= mVal.size() )	throw TError("ValFnc",_("%s: Id or IO %d error!"),"setO()",id);
-    switch( mVal[id].tp )
-    {
-	case IO::String:	setS(id, val->getStrXML());	break;
-	case IO::Integer: case IO::Real: case IO::Boolean:
+    val->connect();
+    if(id < mVal.size())
+	switch(mVal[id].tp)
+	{
+	    case IO::String:	setS(id, val->getStrXML());	break;
+	    case IO::Integer: case IO::Real: case IO::Boolean:
 				setB(id, true);			break;
-	case IO::Object:
-	    if( mVal[id].val.o && !mVal[id].val.o->disconnect() ) delete mVal[id].val.o;
-	    mVal[id].val.o = val;
-	    mVal[id].val.o->connect();
-	    break;
-    }
+	    case IO::Object:
+		if(mVal[id].val.o && !mVal[id].val.o->disconnect()) delete mVal[id].val.o;
+		mVal[id].val.o = val;
+		return;
+	}
+    if(!val->disconnect()) delete val;
+    if(id >= mVal.size()) throw TError("ValFnc",_("%s: Id or IO %d error!"),"setO()",id);
 }
 
 void TValFunc::setMdfChk( bool set )
